[package]
name = "mapfun"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com> | Viraj Sinha <root@vsinha.com"]

[dependencies]
osm-xml = "*"
flame = "*"
flamer = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"
aabb-quadtree = "*"

[dependencies.proj5]
version = "*"
features = ["multithreading"]
